--- a/src/style/style.css
+++ b/src/style/style.css
@@ -9996,6 +9996,12 @@ h6,
   }
 }
 
+@media (max-width: 767px) {
+  .carousel-indicators {
+    display: none !important;
+  }
+} 
+
 @media (max-width: 575.98px) {
   .carousel-caption h5 {
     font-size: 16px;
